[tool.poetry]
name = "laudekoodit"
version = "0.1.0"
description = ""
authors = ["sanikemppainen <sani.kemppainen@helsinki.fi>"]

[tool.poetry.dependencies]
python = "^3.8"
Flask = "^2.1.2"
Flask-SQLAlchemy = "^2.5.1"
psycopg2 = "^2.9.3"
python-dotenv = "^0.20.0"
pylint = "^2.13.8"
black = "^22.3.0"
invoke = "^1.7.0"
requests = "^2.27.1"
gunicorn = "^20.1.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
